Tue Aug  8 09:33:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/ast/ast_interface.cpp:
        * TAO_IDL/ast/ast_type.cpp:
          Initailize some pointers explicitly with 0 to fix gcc41 warnings

Tue Aug  8 08:30:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Codeset_Translator_Factory.h:
          Removed, it was deprecated for more then a year

        * tao/tao.mpc:
          Removed remark about Codeset_Translator_Factory.h

Tue Aug  8 07:53:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO-INSTALL.html:
          Removed vc6 info, added VxWorks 6.3 as supported platform

Tue Aug  8 07:49:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_operation/operation.cpp:
          Fixed typo in comment

Mon Aug  7 19:29:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/EndpointPolicy.mpc:
          Enabed regeneration of EndpointPolicyType.pidl:

        * tao/EndpointPolicy/EndpointPolicy{A,C}.{h,cpp}:
          Removed, not needed anymore

        * tao/EndpointPolicy/EndpointPolicyType.pidl:
          Include Policy_Forward.pidl, Policy.pidl pulls in too
          much.

        * tao/BiDIR_GIOP/BiDIR_GIOP.{h,cpp}:
          Changed is_activated to a bool

        * tao/Profile.cpp (decode):
          Only get encap_len when ACE_NLOGGING is not defined, if it is
          defined then we don't use this variable, so no need to get it.

Mon Aug  7 17:06:52 UTC 2006  Yan Dai  <dai_y@ociweb.com>

        * tao/PortableServer/POAManagerFactory.cpp:

          Removed hard coded policy checking in create_POAManager().
          Instead, the TAO_Policy_Validator is used to validate the
          policies.

        * tao/orbconf.h:

          Fixed a bug that the TAO_CACHED_POLICY_ENDPOINT was set
          after TAO_CACHED_POLICY_MAX_CACHED. This would fix the
          access beyond cached_policies_ array bound problem.
